refactor(project): update structure